--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Buddula Sushanth Babu</h1>
-<img src="../IMG_20230705_232014_596.jpg"width="150">
+<img src="./IMG_20230705_232014_596.jpg"width="150">
 <br>
 <a href="./contact.html">Contact Me|</a>
 <a href="https://goo.gl/maps/V3BdubGUoG4fLSbL9">My Location|</a>
