--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1>Buddula Sushanth Babu</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+</head>
+  <body>
+    <h1>Buddula Sushanth Babu</h1>
 <img src="./IMG_20230705_232014_596.jpg"width="150">
 <br>
 <a href="./contact.html">Contact Me|</a>
@@ -77,3 +85,5 @@
     </li>
     <li>Hindi (Read and Write)</li>
 </ul>
+  </body>
+</html>
